@@ -2,6 +2,7 @@
 
 	* bin/cygbuild.sh: (CygbuildBootVariablesGlobalMain): Add
 	VERSION file to variable cygbuild_opt_exclude_tmp_files.
+	(CygbuildMakefilePrefixCheck): Adjust grep to find prefix=
 
 2008-03-02  Jari Aalto  <jari.aalto@cante.net>
 
